# LevelSynth

./: .cursorrules  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  build_vs.bat  vcpkg.json
docs/: Doxyfile  EDGAR_PORT_INVENTORY.md  PARITY_ROADMAP.md  api.md
src/apps/main/: CMakeLists.txt  layout_preview.cpp  layout_preview.hpp  main.cpp  preset_loader.cpp  preset_loader.hpp
src/libs/: CMakeLists.txt
src/libs/edgar/: CMakeLists.txt  LICENSE
src/libs/edgar/include/edgar/: edgar.hpp
src/libs/edgar/include/edgar/chain_decompositions/: breadth_first_chain_decomposition.hpp  breadth_first_chain_decomposition_old.hpp  chain.hpp  chain_decomposition_configuration.hpp  chain_decompositions.hpp  i_chain_decomposition.hpp  tree_component_strategy.hpp  two_stage_chain_decomposition.hpp
src/libs/edgar/include/edgar/detail/: integer_math.hpp  xorshift64star.hpp
src/libs/edgar/include/edgar/generator/common/: basic_energy_updater.hpp  energy_data.hpp  room_template_repeat_mode.hpp  sa_configuration_provider.hpp  simulated_annealing_configuration.hpp
src/libs/edgar/include/edgar/generator/grid2d/: chain_based_generator_grid2d.hpp  configuration_space_grid2d.hpp  configuration_spaces_generator.hpp  configuration_spaces_grid2d.hpp  constraints_evaluator_grid2d.hpp  door_line_grid2d.hpp  door_mode_grid2d.hpp  door_utils.hpp  graph_based_generator_configuration.hpp  graph_based_generator_grid2d.hpp  graph_based_generator_grid2d.inl  grid2d_layout_state.hpp  layout_controller_grid2d.hpp  layout_door_computation.hpp  layout_door_grid2d.hpp  layout_grid2d.hpp  layout_orchestration.hpp  layout_room_grid2d.hpp  level_description_grid2d.hpp  room_description_grid2d.hpp  room_template_grid2d.hpp  simple_door_mode_grid2d.hpp  simulated_annealing_evolver_grid2d.hpp  weighted_shape_grid2d.hpp
src/libs/edgar/include/edgar/generator/grid2d/detail/: room_index_map.hpp
src/libs/edgar/include/edgar/geometry/: bipartite_matching.hpp  clipper2_util.hpp  grid_polygon_partitioning.hpp  orthogonal_line_grid2d.hpp  orthogonal_line_intersection.hpp  overlap.hpp  polygon_grid2d.hpp  polygon_overlap_grid2d.hpp  rectangle_grid2d.hpp  transformation_grid2d.hpp  vector2_int.hpp
src/libs/edgar/include/edgar/graphs/: graph_algorithms.hpp  planar_faces.hpp  undirected_graph.hpp
src/libs/edgar/include/edgar/io/: dungeon_drawer.hpp  dungeon_drawer.inl  dungeon_drawer_options.hpp  layout_json.hpp  png_rgba.hpp
src/libs/edgar/src/generator/grid2d/: configuration_spaces_generator.cpp  configuration_spaces_grid2d.cpp  room_template_grid2d.cpp  simple_door_mode_grid2d.cpp  simulated_annealing_evolver_grid2d.cpp
src/libs/edgar/src/geometry/: bipartite_matching.cpp  clipper2_util.cpp  grid_polygon_partitioning.cpp  orthogonal_line_grid2d.cpp  orthogonal_line_intersection.cpp  overlap.cpp  polygon_grid2d.cpp  polygon_overlap_grid2d.cpp
src/libs/edgar/src/graphs/: planar_faces.cpp
src/libs/edgar/src/io/: dungeon_drawer.cpp  png_rgba.cpp
src/tests/: CMakeLists.txt  edgar_parity_tests.cpp  edgar_tests.cpp
